# solarwatt-manager-homeassistant

./: .gitignore  CHANGELOG.md  LICENSE  LIESMICH-evvc-guide.md  README-evvc-guide-german.md  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: validate.yml
custom_components/solarwatt_manager/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity_helpers.py  hems_api.py  hems_client.py  http_client.py  legacy_migrations.py  manifest.json  naming.py  registry_cleanup.py  registry_migrations.py  select.py  sensor.py  sensor_meta.py  services.py  services.yaml  state_parser.py  stats_total.py  stats_total_state.py  strings.json  switch.py  thing_matching.py
custom_components/solarwatt_manager/translations/: de.json  en.json  fr.json  it.json  nl.json
docs/: evcc-guide-german.md  evvc-guide-german.md  kiwigrid-items.md
tests/: module_loader.py  test_diagnostics.py  test_hems_api.py  test_hems_client.py  test_naming.py  test_state_parser.py  test_stats_total_state.py  test_thing_matching.py  test_translations.py
