[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "solarwatt-manager-homeassistant"
version = "2026.5.0"
description = "SOLARWATT Manager custom integration for Home Assistant"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
